erDiagram
    items {
        string id PK
        string title
        string area
        datetime created_at
        datetime updated_at
        datetime last_opened
        string entry_doc_id
    }
    documents {
        string id PK
        string item_id FK
        string name
        string kind
        string content_type
        int size
        string body
        string file_id FK
        datetime created_at
        datetime edited_at
    }
    blobs {
        string id PK
        blob data
        string content_type
        string name
    }
    document_versions {
        string id PK
        string doc_id FK
        string body
        string kind
        string cause
        datetime replaced_at
    }
    deletions {
        string collection
        string doc
        datetime deleted_at
    }
    tags {
        int id PK
        string name
    }
    item_tags {
        string item_id FK
        int tag_id FK
    }
    areas {
        string name PK
    }
    search {
        string ref_id
        string item_id
        string scope
        string name
        string body
    }
    items ||--o{ documents : "item_id"
    items |o--o| documents : "entry_doc_id (pin)"
    documents |o--o| blobs : "file_id (File Documents)"
    documents ||--o{ document_versions : "doc_id"
    items ||--o{ item_tags : "item_id"
    tags ||--o{ item_tags : "tag_id"
    items ||--o| search : "scope=item"
    documents ||--o| search : "scope=document"
